# volta

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: agent_ci.yml
docs/pl/:  METRICS.md  ARCHITECTURE.md  METRICS.md
libs/include/nvidia/: nvml.h
libs/proto/: volta.proto
libs/stubs/: nvml_stub.cc
source/agent/: CMakeLists.txt
source/agent/src/: main.cc  metric.h  scheduler.cc  scheduler.h
source/agent/src/collectors/: collector.h  nvml_collector.cc  nvml_collector.h  proc_stat_collector.cc  proc_stat_collector.h  ram_collector.cc  ram_collector.h
source/agent/src/config/: config.h  config_loader.cc  config_loader.h
source/agent/src/platform/: cpu_info.h  gpu_info.h  hardware_info.h  platform_detector.cc  platform_detector.h
